** April 4, 2013 **
Fix issues:
	305 - "close x" now unselects flow. double click to delete a flow
	323 - gui now recovers on timeout errors and polls again
	324 - fixed problem with added flows not displaying
	325 - fixed logic displaying flows in topology view


** March 28, 2013 **
- add and delete flow implemented
- to add flow
	- mouse down in src edge switch
	- drag to dst edge switch
	- release/confirm to create flow
- to delete flow
	- select flow in flow chooser
	- click "close" button in flow table
	- confirm
- same "pending" style as other actions

** March 28, 2013 **
- basic flow chooser
	- click in "eye" to show full list
	- click on "eye" in full list to monitor that flow in the top slot (and show the flow in topology)
		- other flows get pushed down one slot
		- when a flow is pushed off the list, it is no longer displayed in topology
- bug fix for link disappearing after being added
- color improvements
- draw vector while linking to make it clearer what's going to happen

** March 27, 2013 **
- click onos node "eye" icon to highlight switches associated with that controller
- double click onos node else where to activate/deactivate
- double click core switch to activate/deactivate
- mouse down on switch, drag to other switch, mouse up to make link up/down
	allowed links are
		aggregation->core (link up/down)
		core->core (link up/down)
- pending states for links, switches and controllers after executing command
	object pulses until state change or timeout (12s)
- merge from upstream/master

** March 25, 2013 **
- First pass at flow chooser
	- Uses mock data
	- Select flow to show the flow in topology view
	- Selected flow currently always shows "marching ants" Once iperf is setup the movement will only be when there is iperf traffic
	- Still need to do popup flow chooser to "monitor" flows in the flow panel

** March 23, 2013 **
- Link and switch state updates dynamically
- Link direction is indicated with arrow heads

** March 22, 2013 **